//使用proto3语法
syntax = "proto3";

//不要拆分成多个类
option java_multiple_files = false;
//生成java类所在的包
option java_package = "org.example.vcdb.proto";
//生成外层类的类名
option java_outer_classname = "Transaction";

import "google/protobuf/empty.proto";

import "Version.proto";

package Transaction;



// 对外提供的接口
service transactionService {
  // getRegionMeta 方法名，google.protobuf.Empt 传入参数为空， regionMeta  返回响应类
  rpc openTransaction (openTransactionRequest) returns (Version.intReply) {}

  rpc closeTransaction (google.protobuf.Empty) returns (Version.intReply) {}


}



message openTransactionRequest{
  string explainValue=10;
}

